--- a/gradle.properties
+++ b/gradle.properties
@@ -1,17 +1,44 @@
 # Done to increase the memory available to gradle.
-org.gradle.jvmargs=-Xmx1G
+org.gradle.jvmargs=-Xmx2G
 org.gradle.parallel=true
 
 # Fabric Properties
 # check these on https://fabricmc.net/develop
 minecraft_version=1.20.2
-yarn_mappings=1.20.2+build.1
-loader_version=0.14.22
+game_versions=1.20.2
+parchment_version=1.20.1:2023.09.03
+loader_version=0.14.24
 
 # Mod Properties
-mod_version=1.0.0
-maven_group=com.example
-archives_base_name=modid
+mod_version=0.1.0
+maven_group=red.jackf
+archives_base_name=eyespy
 
 # Dependencies
-fabric_version=0.89.1+1.20.2
+jankson_version=1.2.3
+mixin_extras_version=0.2.0
+commons_io_version=2.14.0
+server_translations_api_version=2.1.0+1.20.2-rc2
+fabric_permissions_api_version=0.2-SNAPSHOT
+jflib_base_version=1.1.5+1.20.2
+jflib_colour_version=1.0.3+1.20.2
+jflib_lying_version=0.4.6+1.20.2
+
+# JF_AUTO_UPDATE_BLOCK
+fabric-api_version=0.90.0+1.20.2
+modmenu_version=8.0.0
+emi_version=1.0.22+1.20.2
+# JF_END_AUTO_UPDATE_BLOCK
+
+# Publishing
+prefix=[1.20.2]
+type=alpha
+changelog_filter=[feat],[fix],[change],[docs],[update]
+mod_name=Eye Spy
+github_owner=JackFred2
+github_repo=EyeSpy
+github_url=https://github.com/JackFred2/EyeSpy
+
+# Publishing Testing
+#lastTag=v2.0.16
+#newTag=v2.0.17
