--- a/gradle.properties
+++ b/gradle.properties
@@ -17,17 +17,17 @@ archives_base_name=eyespy
 # Dependencies
 jankson_version=1.2.3
 mixin_extras_version=0.2.0
-commons_io_version=2.14.0
 server_translations_api_version=2.1.0+1.20.2-rc2
 fabric_permissions_api_version=0.2-SNAPSHOT
-jflib_base_version=1.1.5+1.20.2
+jflib_base_version=1.2.0+1.20.2
+jflib_config_version=0.2.1+1.20.2
 jflib_colour_version=1.0.3+1.20.2
-jflib_lying_version=0.4.6+1.20.2
+jflib_lying_version=0.4.7+1.20.2
 
 # JF_AUTO_UPDATE_BLOCK
-fabric-api_version=0.90.0+1.20.2
+fabric-api_version=0.90.7+1.20.2
 modmenu_version=8.0.0
-emi_version=1.0.22+1.20.2
+emi_version=1.0.24+1.20.2
 # JF_END_AUTO_UPDATE_BLOCK
 
 # Publishing
