[internal] update version

--- a/gradle.properties
+++ b/gradle.properties
@@ -10,7 +10,7 @@ parchment_version=1.20.1:2023.09.03
 loader_version=0.14.24
 
 # Mod Properties
-mod_version=0.1.0
+mod_version=1.0.0
 maven_group=red.jackf
 archives_base_name=eyespy
 
@@ -30,7 +30,7 @@ emi_version=1.0.24+1.20.2
 
 # Publishing
 prefix=[1.20.2]
-type=alpha
+type=beta
 changelog_filter=[feat],[fix],[change],[docs],[update]
 mod_name=Eye Spy
 github_owner=JackFred2
