--- a/gradle.properties
+++ b/gradle.properties
@@ -4,8 +4,8 @@ org.gradle.parallel=true
 
 # Fabric Properties
 # check these on https://fabricmc.net/develop
-minecraft_version=1.20.2
-game_versions=1.20.2
+minecraft_version=1.20.1
+game_versions=1.20,1.20.1
 parchment_version=1.20.1:2023.09.03
 loader_version=0.14.24
 
@@ -16,20 +16,20 @@ archives_base_name=eyespy
 
 # Dependencies
 mixin_extras_version=0.2.0
-server_translations_api_version=2.1.0+1.20.2-rc2
-jflib_base_version=1.2.0+1.20.2
-jflib_config_version=0.2.1+1.20.2
-jflib_colour_version=1.0.3+1.20.2
-jflib_lying_version=0.4.10+1.20.2
+server_translations_api_version=2.0.0+1.20
+jflib_base_version=1.2.0+1.20.1
+jflib_config_version=0.2.1+1.20.1
+jflib_colour_version=1.0.3+1.20.1
+jflib_lying_version=0.4.10+1.20.1
 
 # JF_AUTO_UPDATE_BLOCK
-fabric-api_version=0.90.7+1.20.2
-modmenu_version=8.0.0
-emi_version=1.0.24+1.20.2
+fabric-api_version=0.90.7+1.20.1
+modmenu_version=7.2.2
+emi_version=1.0.24+1.20.1
 # JF_END_AUTO_UPDATE_BLOCK
 
 # Publishing
-prefix=[1.20.2]
+prefix=[1.20/.1]
 type=beta
 changelog_filter=[feat],[fix],[change],[docs],[update]
 mod_name=Eye Spy
