--- a/gradle.properties
+++ b/gradle.properties
@@ -4,9 +4,9 @@ org.gradle.parallel=true
 
 # Fabric Properties
 # check these on https://fabricmc.net/develop
-minecraft_version=1.20.1
-game_versions=1.20,1.20.1
-parchment_version=1.20.1:2023.09.03
+minecraft_version=1.19.4
+game_versions=1.19.4
+parchment_version=1.19.4:2023.06.26
 loader_version=0.14.24
 
 # Mod Properties
@@ -16,20 +16,20 @@ archives_base_name=eyespy
 
 # Dependencies
 mixin_extras_version=0.2.0
-server_translations_api_version=2.0.0+1.20
-jflib_base_version=1.2.0+1.20.1
-jflib_config_version=0.2.1+1.20.1
-jflib_colour_version=1.0.3+1.20.1
-jflib_lying_version=0.4.10+1.20.1
+server_translations_api_version=2.0.0-beta.2+1.19.4-pre2
+jflib_base_version=1.2.0+1.19.4
+jflib_config_version=0.2.1+1.19.4
+jflib_colour_version=1.0.3+1.19.4
+jflib_lying_version=0.4.10+1.19.4
 
 # JF_AUTO_UPDATE_BLOCK
-fabric-api_version=0.90.7+1.20.1
-modmenu_version=7.2.2
-emi_version=1.0.24+1.20.1
+fabric-api_version=0.87.2+1.19.4
+modmenu_version=6.3.1
+emi_version=1.0.24+1.19.4
 # JF_END_AUTO_UPDATE_BLOCK
 
 # Publishing
-prefix=[1.20/.1]
+prefix=[1.19.4]
 type=beta
 changelog_filter=[feat],[fix],[change],[docs],[update]
 mod_name=Eye Spy
