--- a/gradle.properties
+++ b/gradle.properties
@@ -7,20 +7,19 @@ org.gradle.parallel=true
 minecraft_version=1.19.4
 game_versions=1.19.4
 parchment_version=1.19.4:2023.06.26
-loader_version=0.14.24
+loader_version=0.15.0
 
 # Mod Properties
-mod_version=1.0.3
+mod_version=1.1.0
 maven_group=red.jackf
 archives_base_name=eyespy
 
 # Dependencies
-mixin_extras_version=0.2.0
 server_translations_api_version=2.0.0-beta.2+1.19.4-pre2
 jflib_base_version=1.2.0+1.19.4
-jflib_config_version=0.2.1+1.19.4
+jflib_config_version=0.2.3+1.19.4
 jflib_colour_version=1.0.3+1.19.4
-jflib_lying_version=0.4.11+1.19.4
+jflib_lying_version=0.5.0+1.19.4
 
 # JF_AUTO_UPDATE_BLOCK
 fabric-api_version=0.87.2+1.19.4
@@ -29,8 +28,11 @@ emi_version=1.0.24+1.19.4
 # JF_END_AUTO_UPDATE_BLOCK
 
 # Publishing
+game_versions_mr=1.19.4
+game_versions_curse=1.19.4-Snapshot,1.19.4
+
 prefix=[1.19.4]
-type=beta
+release_type=release
 changelog_filter=[feat],[fix],[change],[docs],[update]
 mod_name=Eye Spy
 github_owner=JackFred2
