--- a/gradle.properties
+++ b/gradle.properties
@@ -5,22 +5,20 @@ org.gradle.parallel=true
 # Fabric Properties
 # check these on https://fabricmc.net/develop
 minecraft_version=1.20.1
-game_versions=1.20,1.20.1
 parchment_version=1.20.1:2023.09.03
-loader_version=0.14.24
+loader_version=0.15.0
 
 # Mod Properties
-mod_version=1.0.3
+mod_version=1.1.0
 maven_group=red.jackf
 archives_base_name=eyespy
 
 # Dependencies
-mixin_extras_version=0.2.0
 server_translations_api_version=2.0.0+1.20
 jflib_base_version=1.2.0+1.20.1
-jflib_config_version=0.2.1+1.20.1
+jflib_config_version=0.2.3+1.20.1
 jflib_colour_version=1.0.3+1.20.1
-jflib_lying_version=0.4.11+1.20.1
+jflib_lying_version=0.5.0+1.20.1
 
 # JF_AUTO_UPDATE_BLOCK
 fabric-api_version=0.90.7+1.20.1
@@ -29,8 +27,11 @@ emi_version=1.0.24+1.20.1
 # JF_END_AUTO_UPDATE_BLOCK
 
 # Publishing
+game_versions_mr=1.20,1.20.1
+game_versions_curse=1.20-Snapshot,1.20,1.20.1
+
 prefix=[1.20/.1]
-type=beta
+release_type=release
 changelog_filter=[feat],[fix],[change],[docs],[update]
 mod_name=Eye Spy
 github_owner=JackFred2
