--- a/gradle.properties
+++ b/gradle.properties
@@ -4,8 +4,8 @@ org.gradle.parallel=true
 
 # Fabric Properties
 # check these on https://fabricmc.net/develop
-minecraft_version=1.20.2
-parchment_version=1.20.1:2023.09.03
+minecraft_version=1.20.3-rc1
+parchment_version=1.20.2:2023.10.22
 loader_version=0.15.0
 
 # Mod Properties
@@ -14,23 +14,23 @@ maven_group=red.jackf
 archives_base_name=eyespy
 
 # Dependencies
-server_translations_api_version=2.1.0+1.20.2-rc2
-jflib_base_version=1.2.0+1.20.2
-jflib_config_version=0.2.3+1.20.2
-jflib_colour_version=1.0.3+1.20.2
-jflib_lying_version=0.5.0+1.20.2
+server_translations_api_version=2.2.0+1.20.3-rc1
+jflib_base_version=1.2.0+1.20.3
+jflib_config_version=0.2.3+1.20.3
+jflib_colour_version=1.0.3+1.20.3
+jflib_lying_version=0.5.0+1.20.3
 
 # JF_AUTO_UPDATE_BLOCK
-fabric-api_version=0.90.7+1.20.2
-modmenu_version=8.0.0
+fabric-api_version=0.91.1+1.20.3
+modmenu_version=9.0.0-alpha.3
 emi_version=1.0.24+1.20.2
 # JF_END_AUTO_UPDATE_BLOCK
 
 # Publishing
-game_versions_mr=1.20.2
-game_versions_curse=1.20.2-Snapshot,1.20.2
+game_versions_mr=1.20.3-rc1
+game_versions_curse=1.20.3-Snapshot
 
-prefix=[1.20.2]
+prefix=[1.20.3]
 release_type=release
 changelog_filter=[feat],[fix],[change],[docs],[update]
 mod_name=Eye Spy
