--- a/gradle.properties
+++ b/gradle.properties
@@ -4,7 +4,7 @@ org.gradle.parallel=true
 
 # Fabric Properties
 # check these on https://fabricmc.net/develop
-minecraft_version=1.20.3-rc1
+minecraft_version=1.20.4
 parchment_version=1.20.2:2023.10.22
 loader_version=0.15.0
 
@@ -21,16 +21,16 @@ jflib_colour_version=1.0.3+1.20.3
 jflib_lying_version=0.5.0+1.20.3
 
 # JF_AUTO_UPDATE_BLOCK
-fabric-api_version=0.91.1+1.20.3
+fabric-api_version=0.91.1+1.20.4
 modmenu_version=9.0.0-alpha.3
 emi_version=1.0.24+1.20.2
 # JF_END_AUTO_UPDATE_BLOCK
 
 # Publishing
-game_versions_mr=1.20.3-rc1
-game_versions_curse=1.20.3-Snapshot
+game_versions_mr=1.20.3-rc1,1.20.3,1.20.4-rc1,1.20.4
+game_versions_curse=1.20.3-Snapshot,1.20.3,1.20.4
 
-prefix=[1.20.3]
+prefix=[1.20.3/4]
 release_type=release
 changelog_filter=[feat],[fix],[change],[docs],[update]
 mod_name=Eye Spy
