--- a/gradle.properties
+++ b/gradle.properties
@@ -19,6 +19,7 @@ jflib_base_version=1.2.0+1.20.2
 jflib_config_version=0.2.3+1.20.2
 jflib_colour_version=1.0.3+1.20.2
 jflib_lying_version=0.5.0+1.20.2
+jflib_toasts_version=1.0.4+1.20.2
 
 # JF_AUTO_UPDATE_BLOCK
 fabric-api_version=0.90.7+1.20.2
