[feat] notification toast for the feature when the mod is installed client-side

--- a/gradle.properties
+++ b/gradle.properties
@@ -20,6 +20,7 @@ jflib_base_version=1.2.0+1.19.4
 jflib_config_version=0.2.3+1.19.4
 jflib_colour_version=1.0.3+1.19.4
 jflib_lying_version=0.5.0+1.19.4
+jflib_toasts_version=1.0.4+1.19.4
 
 # JF_AUTO_UPDATE_BLOCK
 fabric-api_version=0.87.2+1.19.4
