--- a/gradle.properties
+++ b/gradle.properties
@@ -6,25 +6,25 @@ org.gradle.parallel=true
 # check these on https://fabricmc.net/develop
 minecraft_version=1.20.4
 parchment_version=1.20.2:2023.10.22
-loader_version=0.15.0
+loader_version=0.15.3
 
 # Mod Properties
-mod_version=1.3.4
+mod_version=1.3.5
 maven_group=red.jackf
 archives_base_name=eyespy
 
 # Dependencies
 server_translations_api_version=2.2.0+1.20.3-rc1
-jflib_base_version=1.2.0+1.20.4
+jflib_base_version=1.3.2+1.20.4
 jflib_config_version=0.2.3+1.20.4
-jflib_colour_version=1.0.3+1.20.4
-jflib_lying_version=0.5.1+1.20.4
-jflib_toasts_version=1.0.4+1.20.4
+jflib_colour_version=1.1.0+1.20.4
+jflib_lying_version=0.5.5+1.20.4
+jflib_toasts_version=1.1.0+1.20.4
 
 # JF_AUTO_UPDATE_BLOCK
-fabric-api_version=0.91.1+1.20.4
-modmenu_version=9.0.0-alpha.3
-emi_version=1.0.24+1.20.2
+fabric-api_version=0.95.1+1.20.4
+modmenu_version=9.0.0
+emi_version=1.1.0+1.20.4
 # JF_END_AUTO_UPDATE_BLOCK
 
 # Publishing
